--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "akai-pro-force",
   "version": "0.1.0",
+  "homepage": "https://sestratalanty.github.io/akai-pro-force",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "tailwindcss": "^3.1.8"
   }
 }
